test/Dialect/LLZK_and_Builtin/aux_invalid_type_fail.llzk
// RUN: llzk-opt -verify-diagnostics %s

module attributes {llzk.lang} {
  struct.def @A {
    function.def @compute() -> !struct.type<@A> attributes {function.allow_witness} {
      %self = struct.new : <@A>
      function.return %self : !struct.type<@A>
    }
    function.def @constrain(%self: !struct.type<@A>) attributes {function.allow_constraint} {
      // expected-error@+1 {{custom op 'llzk.aux' invalid kind of Type specified}}
      %0 = llzk.aux : !string.type
      // expected-error@+1 {{'llzk.aux' op result #0 must be finite field element, but got '!string.type'}}
      %1 = "llzk.aux"() : () -> !string.type
      function.return
    }
  }
}

